test/ddc-main/11-Parser/T289-UnmatchedBraces/Main.error.check
Error loading module
  While parsing.
    Parse error in "test/ddc-main/11-Parser/T289-UnmatchedBraces/Main.dcl" (line 18, column 11)
    Unexpected closing brace.
    Expected a binder.
    Expected an expression.
